# guess_you_like

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  __version__.py  accuracy_pick.py  ah.py  ah_analytics.py  ai_config.py  ai_deep_analysis.py  ai_profiles.py  ai_prompt.py  ai_schedule.py  ai_schema.py  analysis_context.py  betfair_500.py  check_results.py  cli.py  compose.db.yaml  config.py  custom_parlay.py  daily_picks.py  daily_picks_ai.py  db_timeline.py  deepseek_client.py  docker-compose.yml  download_500.py  download_data.py  elo_ratings.py  eu_ah_divergence.py  eu_implied_metrics.py  eu_odds_chart.py  group_mc.py  group_stage_model.py  (+56 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
analysis/: __init__.py  base.py  pipeline.py  registry.py  score_recommend.py
analysis/ai/: __init__.py  deep.py  predict.py
analysis/enrich/: __init__.py  jingcai.py  odds_snapshot.py  similarity.py
analysis/quant/: __init__.py  bundle.py  common.py  elo.py  ev.py  mc.py  poisson.py
analysis/rules/: __init__.py  engine.py  output.py  types.py
analysis/signals/: __init__.py  eu_ah_divergence.py  (+6 more)
apps/: __init__.py
core/: __init__.py  context.py
data/: ai_providers.example.json  analysis_plugins.example.json  elo_ratings.json  match_agent_weights.json  match_venues.json  national_team_coverage.json  wc2026_groups.json  wc2026_knockout_bracket.json
db/: connection.py  repository.py  schema.sql
docs/: DATA_SOURCES.md
match_agents/: __init__.py  board.py  chief.py  config.py  experts.py  factor_fetch.py  growth.py  pipeline.py  pipeline_config.py  profiles.py  storage.py  types.py  web_lookup.py  workflow.py
scripts/: _entry.py  cursor_chat.mjs  probe_national_teams.py  refresh_ah_ledger.py  refresh_worldcup_ledger.py  run_local.sh  settle_results.py  setup_local_pg.sh  summarize_wc_opening.py
tests/: test_smoke.py
(+37 files in other folders)
