[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guess-you-like"
version = "0.1.0"
description = "Local odds analysis service for World Cup / Jingcai — scraping, quant models, and optional AI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "ricky1122alonefe" }]
keywords = ["football", "odds", "sports-analytics", "jingcai", "world-cup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pandas>=2.0",
    "xlrd>=2.0",
    "openpyxl>=3.1",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/ricky1122alonefe/guess_you_like"
Repository = "https://github.com/ricky1122alonefe/guess_you_like"
Issues = "https://github.com/ricky1122alonefe/guess_you_like/issues"

[project.scripts]
guess-you-like = "scripts._entry:main"
gyl = "scripts._entry:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis*", "core*", "db*", "scripts*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["data/*.json", "data/*/*.csv", "data/*/*.txt", "db/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
